<resources>
    <string name="app_name">Asistencia</string>
    <string name="welcome">Bienvenido</string>
    <string name="Cod_Est">Codigo de establecimiento</string>
    <string name="Search">Buscar</string>
    <string name="Asistencia">Asistencia</string>
    <string name="F">F</string>
    <string name="M">M</string>
    <string name="Matutino">Matutino</string>
    <string name="Vespertino">Vespertino</string>
    <string name="Modalidad">Modalidad</string>
    <string name="Save">Guardar</string>
    <string name="title_activity_button2">ButtonActivity2</string>
    <string name="title_home">Estudiantes</string>
    <string name="title_dashboard">Maestros</string>
    <string name="title_notifications">Misselanea</string>
</resources>